--- a/DOCKERFILE
+++ b/DOCKERFILE
@@ -1,12 +1,15 @@
+# ---- Build stage ----
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-COPY BeloteTournament.sln ./
-COPY src ./src
-RUN dotnet restore
+# Copy solution + sources from backend/
+COPY backend/BeloteTournament.sln ./BeloteTournament.sln
+COPY backend/src ./src
 
+RUN dotnet restore
 RUN dotnet publish ./src/BeloteTournament.Api/BeloteTournament.Api.csproj -c Release -o /app/publish
 
+# ---- Runtime stage ----
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 
